--- a/ToDoList/ToDoList.csproj
+++ b/ToDoList/ToDoList.csproj
@@ -24,6 +24,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <Folder Include="Controllers\App\" />
     <Folder Include="Views\AppViews\ToDos\" />
   </ItemGroup>
 
